# contester

./: .gitmodules  .gitmodules~
contester/: Cargo.toml  build.rs
contester/containers/helloworld/: Dockerfile
contester/proto/: testing_service.proto
contester/src/: main.rs  podman.rs
contester/src/actors/: messages.rs  mod.rs  result_collector.rs  task_manager.rs  worker.rs
contester/src/old_actors/: container_manager.rs  generator.rs  messages.rs  mod.rs  result_collector.rs  validator.rs  worker.rs
document/: main.dvi  main.tex
