[package]
name = "rust"
version = "0.1.0"
edition = "2024"

[dependencies]
actix = "0.13"
actix-web = "4.0"
futures-util = "0.3.31"
http-body-util = "0.1.3"
hyper = { version = "1.6.0", features = ["client", "http1"] }
hyper-util = { version = "0.1.14", features = ["client-legacy", "tokio"] }
podman-api = "0.10.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.32", features = ["full"] }
